test(tools): fix Corda AIO flowdb image: JVM upgrade, flow permissions
1. Also removed the party B, C and notary because none of these are present
in the ledger definition that we get handed down from the official kotlin
samples Corda GitHub repository.
2. The above change also saves on resources to have only party A which
makes this image boot very fast compared to the other Corda AIO images.
3. Also refactored the corda sample app enum so that the file-system paths
declared in it are matching reality instead of pointing to non-existent
directories.

Signed-off-by: Peter Somogyvari <peter.somogyvari@accenture.com>